feat: 예외처리 클래스 추가
예외처리 클래스 추가와 그에 따른 코드 수정 및 README.md 수정